# codecrafters-http-server-rust

./: Cargo.toml  README.md
http/: Cargo.toml
http/src/: header.rs  lib.rs  method.rs  status.rs
lib/: Cargo.toml
lib/src/: lib.rs  request.rs  response.rs  route.rs  router.rs
lib/src/route/: section.rs
src/: http.rs  main.rs
