[package]
name = "gus-http-server"
version = "0.1.0"
authors = ["Ruan G. Molinari <github.com/ruan-molinari>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"    # error handling
bytes = "1.3.0"      # helps manage buffers
thiserror = "1.0.38" # error handling

[dependencies.gus]
path = "lib"

[dependencies.gus-http]
path = "http"
